# pspp

./: .cvsignore  .gitignore  ABOUT-NLS  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  ONEWS  README  README.CVS  README.Git  README.developer  Smake  SparkleShare.txt  THANKS  TODO  acconfig.h  acinclude.m4  aclocal.m4  config.h.in  config.sub  configure  configure.ac  configure.in  gettextize  glade.patch  pref.h.orig  pspp-mode.el  reconfigure
config/: ChangeLog  Makefile.am  Makefile.in  OChangeLog  automake.mk  devices  html-prologue  papersize  ps-prologue
doc/: .cvsignore  .gitignore  ChangeLog  Makefile.am  Makefile.in  automake.mk  bugs.texi  combining.texi  command-index.texi  concept-index.texi  configuring.texi  credits.texi  data-file-format.texi  data-io.texi  data-selection.texi  expressions.texi  fdl.texi  files.texi  flow-control.texi  function-index.texi  get-commands.pl  grab  gui.texi  installing.texi  introduction.texi  invoking.texi  language.texi  license.texi  mdate-sh  not-implemented.texi  pic45.grab  pic47.grab  portable-file-format.texi  pspp-convert.texi  pspp-dev.texi  pspp-dev.texinfo  pspp-dump-sav.texi  pspp.1  pspp.info  pspp.info-1  (+19 more)
doc/dev/: concepts.texi  data.texi  i18n.texi  intro.texi  output.texi  pc+-file-format.texi  portable-file-format.texi  q2c.texi  syntax.texi  system-file-format.texi
lib/dcdflib/: COPYING  ChangeLog  Makefile.am  Makefile.in  README  dcdflib.c  ipmpar.c
lib/gmp/: ChangeLog  INSTALL  Makefile.am  Makefile.in  extract-dbl.c  gmp-impl.h  gmp-mparam.h  longlong.h  memory.c
lib/gsl-extras/: ChangeLog  Makefile.am  README  automake.mk  betadistinv.c  binomial.c  geometric.c  gsl-extras.h  hypergeometric.c  negbinom.c  poisson.c
lib/linreg/: ChangeLog  Makefile.am  automake.mk  coefficient.c  linreg.c  pspp_linreg.h  sweep.c  sweep.h
lib/misc/: ChangeLog  Makefile.am  Makefile.in  README  alloca.c  automake.mk  getdelim.c  getline.c  getopt.c  getopt1.c  memchr.c  memcmp.c  memmem.c  memmove.c  memset.c  qsort.c  stpcpy.c  strcasecmp.c  strncasecmp.c  strpbrk.c  strstr.c  strtok_r.c  strtol.c  strtoul.c  wx-mp-sr.c  wx-mp-sr.h
src/: .cvsignore  .gitignore  ChangeLog  Make.build  Makefile.am  Makefile.in  aggregate.c  algorithm.c  algorithm.h  alloc.c  alloc.h  any-reader.c  any-reader.h  any-writer.c  any-writer.h  apply-dict.c  approx.h  ascii.c  automake.mk  autorecode.c  avl.c  avl.h  barchart.c  bitvector.h  bool.h  box-whisker.c  calendar.c  calendar.h  cartesian.c  case.c  case.h  casefile.c  casefile.h  cases.c  cases.h  cat-routines.h  cat.c  cat.h  chart.c  chart.h  (+212 more)
src/data/: ChangeLog  OChangeLog  any-reader.c  any-reader.h  any-writer.c  any-writer.h  attributes.c  attributes.h  automake.mk  calendar.c  calendar.h  case-map.c  case-map.h  case-matcher.c  case-matcher.h  case-ordering.c  case-ordering.h  case-sink.c  case-sink.h  case-source.c  case-source.h  case-tmpfile.c  case-tmpfile.h  case.c  case.h  casedeque.h  casefile-factory.h  casefile-private.h  casefile.c  casefile.h  casefilter.c  casefilter.h  casegrouper.c  casegrouper.h  caseinit.c  caseinit.h  caseproto.c  caseproto.h  casereader-filter.c  casereader-project.c  (+117 more)
src/expressions/: ChangeLog  Makefile.am  PSPP_expressions.pm  TODO  evaluate.c  evaluate.h.pl  evaluate.inc.pl  generate.pl  helpers.c  helpers.h  operations.def  operations.h.pl  optimize.c  optimize.inc.pl  parse.c  parse.inc.pl  private.h  public.h
src/language/: ChangeLog  OChangeLog  automake.mk  command.c  command.def  command.h  line-buffer.c  line-buffer.h  prompt.c  prompt.h  syntax-file.c  syntax-file.h  syntax-string-source.c  syntax-string-source.h
src/libpspp/: ChangeLog  OChangeLog  abt.c  abt.h  alloc.c  alloc.h  argv-parser.c  argv-parser.h  array.c  array.h  assertion.h  automake.mk  bit-vector.h  bt.c  bt.h  cast.h  cmac-aes256.c  cmac-aes256.h  compiler.h  copyleft.c  copyleft.h  deque.c  deque.h  encoding-guesser.c  encoding-guesser.h  ext-array.c  ext-array.h  float-format.c  float-format.h  freaderror.c  freaderror.h  getl.c  getl.h  hash-functions.c  hash-functions.h  hash.c  hash.h  heap.c  heap.h  hmap.c  (+80 more)
src/math/: ChangeLog  automake.mk  box-whisker.c  box-whisker.h  categoricals.c  categoricals.h  chart-geometry.c  chart-geometry.h  coefficient.c  coefficient.h  correlation.c  correlation.h  covariance-matrix.c  covariance-matrix.h  covariance.c  covariance.h  design-matrix.c  design-matrix.h  extrema.c  extrema.h  factor-stats.c  factor-stats.h  group-proc.h  group.c  group.h  histogram.c  histogram.h  interaction.c  interaction.h  levene.c  levene.h  linreg.c  linreg.h  merge.c  merge.h  moments.c  moments.h  np.c  np.h  order-stats.c  (+14 more)
src/output/: ChangeLog  OChangeLog  README  afm.c  afm.h  ascii.c  ascii.h  automake.mk  cairo-chart.c  cairo-chart.h  cairo.c  cairo.h  chart-item-provider.h  chart-item.c  chart-item.h  chart-provider.h  chart.c  chart.h  csv.c  driver-provider.h  driver.c  driver.h  dummy-chart.c  groff-font.c  html.c  htmlP.h  journal.c  journal.h  manager.c  manager.h  measure.c  measure.h  message-item.c  message-item.h  mk-class-boilerplate  msglog.c  msglog.h  odt.c  options.c  options.h  (+22 more)
src/ui/: ChangeLog  OChangeLog  automake.mk  command-line.c  command-line.h  debugger.c  debugger.h  flexifile.c  flexifile.h  source-init-opts.c  source-init-opts.h  syntax-gen.c  syntax-gen.h
tests/: .cvsignore  .gitignore  Book1.gnm.unzipped  ChangeLog  Makefile.am  Makefile.in  OChangeLog  aggregate.stat  atlocal.in  automake.mk  autorecod.stat  beg-data.stat  bignum.data  bignum.stat  compute.stat  count.stat  coverage.sh  crosstabs.stat  data-fmts.stat  data-list.data  data-list.stat  descript.stat  dissect-sysfile.c  do-if.stat  do-repeat.stat  expr.stat  file-lab.stat  filter.stat  flip.stat  gengarbage.c  inpt-pgm.stat  lag.stat  list.data  list.stat  loop.stat  mdfy-vars.stat  means.stat  mtch-file.stat  no_case_size.sav  pcs-if.stat  (+22 more)
tests/bugs/: README  agg-crash-2.sh  agg_crash.sh  alpha-freq.sh  big-input-2.sh  big-input.sh  case-map.sh  comment-at-eof.sh  compression.sh  compute-fmt.sh  get.sh  (+53 more)
(+1206 files in other folders)
