## Process this file with automake to produce Makefile.in  -*- makefile -*-

info_TEXINFOS = pspp.texinfo 

EXTRA_DIST = pspp.man \
	bugs.texi \
	command-index.texi \
	concept-index.texi \
	configuring.texi \
	credits.texi \
	data-file-format.texi \
	data-io.texi \
	data-selection.texi \
	expressions.texi \
	files.texi \
	flow-control.texi \
	function-index.texi \
	installing.texi \
	introduction.texi \
	invoking.texi \
	language.texi \
	license.texi \
	not-implemented.texi \
	portable-file-format.texi \
	q2c.texi \
	statistics.texi \
	transformation.texi \
	utilities.texi \
	variables.texi


CLEANFILES = pspp.info pspp.info-*
MAINTAINERCLEANFILES=Makefile.in 
